--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,8 +90,15 @@ button:hover{
     top: 0;
 }
 
+@font-face {
+  font-family: firstFont;
+  src: url(../font/NFL_RedZone.ttf);
+
+}
+
 h1 {
   text-align: center;
+  font-family: firstFont;
 }
 
 
